--- a/mysite/templates/mysite/base.html
+++ b/mysite/templates/mysite/base.html
@@ -1,4 +1,5 @@
 {% load staticfiles %}
+
 <html>
         <head>
 	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
@@ -9,10 +10,12 @@
         </head>
 
         <body>
-
             <div class="page-header">
                 <h1><a href=""><strong>대신팜(필요없는 문제집, 필기구 여기서 팔아!) </strong></a></h1>
-            </div>
+		<a href="{% url 'login' %}" class="btn btn-default" role="button">로그인</a>
+		<a href="{% url 'register' %}" class="btn btn-default" role="button">회원가입</a>
+		<a href="{% url 'post_new' %}" class="btn btn-default" role="button">물건팔기!</a>
+</div>
 
 	    <div class="content container">
     		<div class="row">
