--- a/mysite/templates/mysite/login.html
+++ b/mysite/templates/mysite/login.html
@@ -6,7 +6,7 @@
     <body>
         <h1>Login to PAM</h1>
 
-        <form id="login_form" method="post" action="/mysite/login/">
+        <form id="login_form" method="post" action="/login/">
             {% csrf_token %}
             Username: <input type="text" name="username" value="" size="50" />
             <br />
